# labcas-ml-serve

./: .dockerignore  .gitignore  Dockerfile  README.md  TODOs.py  alphan.py  auto_scaler.py  deployer_env_A.py  docker-compose.yaml  entrypoint.sh  example.py  labcas-ml-serve.sublime-project  main_example.py  pyproject.toml  ray_start.py  ray_utils.py  requirements.txt  setup.cfg  test.py
configs/: basic.py  env_A.py  environments.py
configs/environments/environment_A/: deployer.py  mappings.py  requirements.txt
configs/environments/environment_B/: deployer.py  mappings.py  mappings_sam_ed_reference.py  requirements.txt
deployments/alphan/: alphan.py  alphan_utils.py  utils.py
deployments/alphan/models/: unet_128.h5  unet_256.h5  unet_64.h5
deployments/alphan_old/: alphan.py
deployments/api_infra/: infra.py  labcas.py
deployments/autoscaler/: auto_scaler.py
deployments/sam/: requirements.txt  run.py
deployments/samed/: ref_code.py  requirements.txt  run.py  sam_lora_image_encoder.py
deployments/template/: run.py
docker/: Dockerfile  docker-compose.yaml
docs/: TODOs.md
etc/: nginx.conf.in  supervisord.conf
examples/: ray_start.py
examples/envs_3_7_8/: example.py  example2.py  memort_test.py  requirements.txt  test.py
examples/envs_3_9_0/: example.py
models/alphan/: test.py
samples/: process.py  process.r
sbin/: launch.sh  nginx.sh
src/: framework_utils.py  ray_start.py  ray_stop.py  ray_utils.py
src/archive/: test.py
src/jpl/: __init__.py
to-convert/: framework_utils.py  ray_start.py  ray_stop.py  ray_utils.py
(+13 files in other folders)
