[metadata]
name = jpl.edrn.labcas.mlserve
version = file: src/jpl/edrn/labcas/mlserve/VERSION.txt
author = Asitang Mishra
author_email = Asitang.Mishra@jpl.nasa.gov
description = Ray-Serve–based machine learning with Alphan Atinok's algorithms
long_description = file: README.md
long_description_content_type = text/markdown
license = apache-2.0
keywords = ray, rayserve, ml
url = https://github.com/EDRN/labcas-ml-serve
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Healthcare Industry
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics


[options]
zip_safe = True
include_package_data = True
python_requires = >= 3.9, <3.10
packages = find:
package_dir =
    = src
install_requires =
    aiofiles==22.1.0
    fastapi==0.79.0
    glob2==0.7
    imagecodecs==2022.2.22
    matplotlib==3.5.2
    numpy==1.23.0
    pandas==1.4.3
    python-multipart==0.0.5
    ray[serve]==1.13.0
    redis==4.3.4
    scikit-image==0.19.3
    scikit-learn==1.1.1
    scipy==1.8.1
    tensorflow==2.9.1

namespace_packages =
    jpl
    jpl.edrn
    jpl.edrn.labcas


[options.packages.find]
where = src


[options.entry_points]
console_scripts =
    labcas-ml-serve = jpl.edrn.labcas.mlserve.main:main
